--- a/index.html
+++ b/index.html
@@ -394,9 +394,9 @@
                             <div class="bgallery-img mb-3">
                                 <div class="carousel-container">
                                     <div class="carousel-slide">
-                                        <img src="img/g2.jpg" alt="Image 1">
-                                        <img src="img/g3.jpg" alt="Image 2">
-                                        <img src="img/g1.jpg" alt="Image 3">
+                                        <img src="https://testimg.crewdogsconnect.com/photo/246/listing/207/14947895.jpg" alt="Image 1">
+                                        <img src="https://testimg.crewdogsconnect.com/photo/246/listing/207/photo2.jpg" alt="Image 2">
+                                        <img src="https://testimg.crewdogsconnect.com/photo/246/listing/207/photo1.jpg" alt="Image 3">
                                     </div>
                                 </div>
                                 <div class="dots"></div>
@@ -428,9 +428,8 @@
                             <div class="bgallery-img mb-3">
                                 <div class="carousel-container">
                                     <div class="carousel-slide">
-                                        <img src="img/g2.jpg" alt="Image 1">
-                                        <img src="img/g3.jpg" alt="Image 2">
-                                        <img src="img/g1.jpg" alt="Image 3">
+                                        <img src="https://testimg.crewdogsconnect.com/photo/203/listing/1226/photo1.jpg" alt="Image 1">
+                                        <img src="https://testimg.crewdogsconnect.com/photo/203/listing/1226/photo2.jpg" alt="Image 2">
                                     </div>
                                 </div>
                                 <div class="dots"></div>
@@ -1199,6 +1198,8 @@
             });
         });
     </script>
+
+    <script src="js/loader.js"></script>
 
 
 </body>
