--- a/details.html
+++ b/details.html
@@ -532,7 +532,7 @@
 
       <div class="location-full-map">
         <h5 class="details-header-font-1">Location and surroundings</h5>
-        <img src="img/full-map.PNG" alt="">
+        <img src="img/full-map.PNG" style="width: 100%;" alt="">
       </div>
       <br>
 
