--- a/dashBoard/dashboard2.html
+++ b/dashBoard/dashboard2.html
@@ -332,7 +332,7 @@
       </div>
 
       <br>
-      <h1 class="dashboard-font-1">Welcome, Mob</h1>
+      <p class="mb-0 dashboard-font-2">Booking</p>
       <br>
       <div class="d-flex justify-content-between">
         <div class="d-flex gap-2 ">
