--- a/dashBoard/dashboard.html
+++ b/dashBoard/dashboard.html
@@ -73,7 +73,7 @@
           <header class="d-flex flex-wrap align-items-center justify-content-between justify-content-md-between py-2">
             <div class="col-md-3 mb-md-0 ">
               <a href="/" class="d-inline-flex link-body-emphasis text-decoration-none">
-                <img src="../img/logo.svg" alt="">
+              <img src="../img/logo.svg" alt="">
               </a>
             </div>
             <div class="col-md-3 gap-2 d-flex justify-content-end">
@@ -107,16 +107,9 @@
               </div>
 
               <div class="dropdown ">
-                <button class=" d-flex gap-1 align-items-center  dropdown" style="border: none; background-color: white;
-                  display: flex;
-                  width: 92px;
-                  padding: 12px;
-                  justify-content: center;
-                  align-items: center;
-                  gap: 8px;
-                  flex-shrink: 0;
-                  border-radius: 16px;
-                  border: 1px solid var(--Grayscale-Gray-24, rgba(234, 235, 237, 0.80));" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                <button class=" border  p-2 d-flex gap-2 align-items-center  dropdown"
+                  style="border: none; background-color: white;" type="button" data-bs-toggle="dropdown"
+                  aria-expanded="false">
                   <img src="../img/people.jpg" style="width: 30px; height: 30px; border-radius: 50%;" alt="">
                   <svg xmlns="http://www.w3.org/2000/svg" width="16" height="8" viewBox="0 0 16 8" fill="none">
                     <path d="M1 7H15M1 1H15" stroke="#121212" stroke-width="1.5" stroke-linecap="round" />
@@ -259,7 +252,7 @@
             <p class="col-message-1">Upcoming</p>
           </div>
         </div>
-        <a href="" class="dashboard-font-4">See all Bookings</a>
+        <a href="" class="dashboard-font-4" style="text-decoration: underline !important;">See all Bookings</a>
       </div>
       <div class=" w-100 d-flex justify-content-center" style="padding: 3rem 0;">
         <div class="d-flex flex-column align-items-center">
