--- a/dashBoard/dashboard2.html
+++ b/dashBoard/dashboard2.html
@@ -197,7 +197,7 @@
               </div>
 
               <div class="dropdown">
-                <button class=" d-flex gap-1 align-items-center  dropdown"
+                <button class="border p-2 d-flex gap-2 align-items-center  dropdown"
                   style="border: none; background-color: white;" type="button" data-bs-toggle="dropdown"
                   aria-expanded="false">
                   <img src="../img/people.jpg" style="width: 30px; height: 30px; border-radius: 50%;" alt="">
@@ -332,7 +332,7 @@
       </div>
 
       <br>
-      <p class="mb-0 dashboard-font-2">Booking</p>
+      <p class="mb-0 dashboard-font-2">Schedule</p>
       <br>
       <div class="d-flex justify-content-between">
         <div class="d-flex gap-2 ">
@@ -343,7 +343,7 @@
           <div class="coll col-message-1" onclick="showContent('content3')">Upcoming <span class="bluedot"></span></div>
         </div>
 
-        <a href="" class="dashboard-font-4">See all Bookings</a>
+        <a href="" class="dashboard-font-4" style="text-decoration: underline;" >See all Bookings</a>
       </div>
 
       <!--
