--- a/dashBoard/listingDashboard.html
+++ b/dashBoard/listingDashboard.html
@@ -163,40 +163,47 @@
     </div>
     <br>
     <br>
+
     <div class="d-flex flex-column gap-1">
-      <div class="tabel-header">
-        <div class="tabel-1">
-          <div class="tabel-2">
-            <p class="personalinfor-header-1">Title</p>
-            <p class="personalinfor-header-1">Status</p>
+
+      <div class="grid-2 gap-5">
+        <div class="d-flex-1">
+          <div class="d-flex gap-2 justify-content-between w-100" >
+            <div class="d-flex gap-2">
+              <p class="personalinfor-header-1">Title</p>
+             </div>
+            <div class="d-flex">
+              <p class="personalinfor-header-1" style="text-align: center; margin-right: 4rem;">Status</p>
+            </div>
           </div>
         </div>
-        <div class="tabel-1">
+        <div class="d-flex-1">
           <div class="tabel-2">
             <p class="personalinfor-header-1">Address</p>
-            <p class="personalinfor-header-1">Listing type</p>
+            <p class="personalinfor-header-1" style="margin-left: 9rem;">Listing type</p>
           </div>
         </div>
       </div>
+      
       <hr>
 
-      <div class="tabel">
-        <div class="tabel-1">
-          <div class="tabel-2">
+      <div class="grid-2 gap-5">
+        <div class="d-flex-1">
+          <div class="d-flex gap-2 justify-content-between w-100" >
             <div class="d-flex gap-2">
-              <img src="../img/g1.jpg" alt="">
-              <div class="d-flex justify-content-evenly flex-column">
-                <p class="personalinfor-header-1 mb-0">A small room in denver</p>
-                <p class="msg-font-3 mb-0">Denver, Colorado</p>
-              </div>
+            <img src="../img/g1.jpg" alt="">
+            <div class=" d-flex  justify-content-evenly flex-column" >
+              <p class="personalinfor-header-1 mb-0">A small room in denver</p>
+              <p class="msg-font-3 mb-0">Denver, Colorado</p>
             </div>
+             </div>
             <div class="d-flex">
               <button class="availabel-button-tabel active-button-blue">Available</button>
               <button class="Unavailable-button-tabel">Unavailable</button>
             </div>
           </div>
         </div>
-        <div class="tabel-1">
+        <div class="d-flex-1">
           <div class="tabel-2">
             <p class="offer-header-font-4 mb-0">Address of apartment/room</p>
             <p class="offer-header-font-4 mb-0">Room</p>
@@ -204,47 +211,23 @@
         </div>
       </div>
       <hr>
-      <div class="tabel">
-        <div class="tabel-1">
-          <div class="tabel-2">
+      <div class="grid-2 gap-5">
+        <div class="d-flex-1">
+          <div class="d-flex gap-2 justify-content-between w-100" >
             <div class="d-flex gap-2">
-              <img src="../img/g1.jpg" alt="">
-              <div class="d-flex justify-content-evenly flex-column">
-                <p class="personalinfor-header-1 mb-0">A small room in denver</p>
-                <p class="msg-font-3 mb-0">Denver, Colorado</p>
-              </div>
+            <img src="../img/g1.jpg" alt="">
+            <div class=" d-flex  justify-content-evenly flex-column" >
+              <p class="personalinfor-header-1 mb-0">A small room in denver</p>
+              <p class="msg-font-3 mb-0">Denver, Colorado</p>
             </div>
-            <div class="d-flex">
-              <button class="availabel-button-tabel ">Available</button>
-              <button class="Unavailable-button-tabel active-button-red">Unavailable</button>
-            </div>
-          </div>
-        </div>
-        <div class="tabel-1">
-          <div class="tabel-2">
-            <p class="offer-header-font-4 mb-0">Address of apartment/room</p>
-            <p class="offer-header-font-4 mb-0">Room</p>
-          </div>
-        </div>
-      </div>
-      <hr>
-      <div class="tabel">
-        <div class="tabel-1">
-          <div class="tabel-2">
-            <div class="d-flex gap-2">
-              <img src="../img/g1.jpg" alt="">
-              <div class="d-flex justify-content-evenly flex-column">
-                <p class="personalinfor-header-1 mb-0">A small room in denver</p>
-                <p class="msg-font-3 mb-0">Denver, Colorado</p>
-              </div>
-            </div>
+             </div>
             <div class="d-flex">
               <button class="availabel-button-tabel active-button-blue">Available</button>
               <button class="Unavailable-button-tabel">Unavailable</button>
             </div>
           </div>
         </div>
-        <div class="tabel-1">
+        <div class="d-flex-1">
           <div class="tabel-2">
             <p class="offer-header-font-4 mb-0">Address of apartment/room</p>
             <p class="offer-header-font-4 mb-0">Room</p>
@@ -252,23 +235,23 @@
         </div>
       </div>
       <hr>
-      <div class="tabel">
-        <div class="tabel-1">
-          <div class="tabel-2">
+      <div class="grid-2 gap-5">
+        <div class="d-flex-1">
+          <div class="d-flex gap-2 justify-content-between w-100" >
             <div class="d-flex gap-2">
-              <img src="../img/g1.jpg" alt="">
-              <div class="d-flex justify-content-evenly flex-column">
-                <p class="personalinfor-header-1 mb-0">A small room in denver</p>
-                <p class="msg-font-3 mb-0">Denver, Colorado</p>
-              </div>
+            <img src="../img/g1.jpg" alt="">
+            <div class=" d-flex  justify-content-evenly flex-column" >
+              <p class="personalinfor-header-1 mb-0">A small room in denver</p>
+              <p class="msg-font-3 mb-0">Denver, Colorado</p>
             </div>
+             </div>
             <div class="d-flex">
-              <button class="availabel-button-tabel ">Available</button>
-              <button class="Unavailable-button-tabel active-button-red" >Unavailable</button>
+              <button class="availabel-button-tabel active-button-blue">Available</button>
+              <button class="Unavailable-button-tabel">Unavailable</button>
             </div>
           </div>
         </div>
-        <div class="tabel-1">
+        <div class="d-flex-1">
           <div class="tabel-2">
             <p class="offer-header-font-4 mb-0">Address of apartment/room</p>
             <p class="offer-header-font-4 mb-0">Room</p>
@@ -276,23 +259,23 @@
         </div>
       </div>
       <hr>
-      <div class="tabel">
-        <div class="tabel-1">
-          <div class="tabel-2">
+      <div class="grid-2 gap-5">
+        <div class="d-flex-1">
+          <div class="d-flex gap-2 justify-content-between w-100" >
             <div class="d-flex gap-2">
-              <img src="../img/g1.jpg" alt="">
-              <div class="d-flex justify-content-evenly flex-column">
-                <p class="personalinfor-header-1 mb-0">A small room in denver</p>
-                <p class="msg-font-3 mb-0">Denver, Colorado</p>
-              </div>
+            <img src="../img/g1.jpg" alt="">
+            <div class=" d-flex  justify-content-evenly flex-column" >
+              <p class="personalinfor-header-1 mb-0">A small room in denver</p>
+              <p class="msg-font-3 mb-0">Denver, Colorado</p>
             </div>
+             </div>
             <div class="d-flex">
-              <button class="availabel-button-tabel ">Available</button>
-              <button class="Unavailable-button-tabel active-button-red">Unavailable</button>
+              <button class="availabel-button-tabel active-button-blue">Available</button>
+              <button class="Unavailable-button-tabel">Unavailable</button>
             </div>
           </div>
         </div>
-        <div class="tabel-1">
+        <div class="d-flex-1">
           <div class="tabel-2">
             <p class="offer-header-font-4 mb-0">Address of apartment/room</p>
             <p class="offer-header-font-4 mb-0">Room</p>
