--- a/dashBoard/rulesAndPolices.html
+++ b/dashBoard/rulesAndPolices.html
@@ -1,222 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Crew dogs</title>
-  <link href="../css/bootstrap.css" rel="stylesheet">
-  <link href="../css/style.css" rel="stylesheet">
-  <link href="../css/menu.css" rel="stylesheet">
-
-  <link href="../css/slick-slider.css" rel="stylesheet">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link rel="stylesheet" href="../css/s-custom.css">
-  <link rel="stylesheet" href="../css/scrollbar.css">
-  <link rel="stylesheet" href="../css/fonts.css">
-  <link rel="stylesheet" href="../css/message.css">
-  <link rel="stylesheet" href="../css/dashboard.css">
-  <link
-    href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap"
-    rel="stylesheet">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-
-  <style>
-    .coll {
-      cursor: pointer;
-      display: flex;
-      align-items: center;
-      gap: 3px;
-    }
-
-    .activeblu {
-      color: #0D99FF;
-      background-color: #F3FAFE;
-      border: 1px solid #F3FAFE;
-    }
-
-    .input-search {
-      display: flex;
-      border: 1px solid #a5a3a3;
-      border-radius: 1rem;
-      align-items: center;
-      padding: 0 .5rem;
-    }
-
-    .input-search input {
-      border: none;
-      padding: 0 0 0 5px !important;
-    }
-
-    .input-search input:focus {
-      outline: none;
-    }
-
-    .button-001 {
-      display: flex;
-      padding: 6px 20px;
-      align-items: center;
-      gap: 2px;
-      border-radius: 16px;
-      border: 1px solid #E7E7E7;
-      background: var(--Gray-04, #FCFCFC);
-
-    }
-
-    .green-dot {
-      width: 4px;
-      height: 4px;
-      border-radius: 6px;
-      background: var(--System-Success-Success-50, #25C26E);
-      position: absolute;
-      right: 13.2px;
-      top: 10.664px;
-      display: block;
-    }
-
-    .active-tick {
-      background-color: #0D99FF;
-      color: white;
-    }
-
-    @media (max-width:700px) {
-      #profile-mobile-version {
-        display: block !important;
-      }
-
-      .profile-desktop-version {
-        display: none !important;
-      }
-    }
-  </style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
 </head>
-
 <body>
+  <div class="container mobile-padding-none" style="max-width: 1550px;">
+    <div class="container mobile-padding-none d-flex justify-content-evenly align-items-start">
 
-  <div>
-    <div class="container">
-      <div class=" mx-3">
-        <div class="w-100">
-          <header class="d-flex flex-wrap align-items-center justify-content-between justify-content-md-between py-2">
-            <div class="col-md-3 mb-md-0 ">
-              <a href="../index.html" class="d-inline-flex link-body-emphasis text-decoration-none">
-                <img src="../img/logo.svg" alt="">
-              </a>
-            </div>
-            <div class="col-md-3 gap-2 d-flex justify-content-end">
-              <!-- <ul class="nav nav-pills">
-        <li class="nav-item"><a href="#" class="nav-link fs-16 bp-3" aria-current="page">Add my place</a></li>
-        
-       </ul> -->
-              <!--menu items-->
-              <div class="d-flex gap-3 align-items-center">
-                <a href="#" class="help-text mb-0 pb-1 link-not-active  " style="color: #444444;">Dashboard</a>
-                <a href="booking.html" class="help-text mb-0 pb-1 link-not-active link-active"
-                  style="color: #444444;">Bookings</a>
-                <a href="#" class="help-text mb-0 pb-1 link-not-active" style="color: #444444;">Calendar</a>
-                <a href="#" class="help-text mb-0 pb-1 link-not-active" style="color: #444444;">Listings</a>
-                <a href="#" class="help-text mb-0 pb-1 link-not-active" style="color: #444444;">Inbox</a>
-                <div class="mobile-display-none" style="cursor: pointer;" onclick="toggleNotification()">
-                  <svg class="not-selected" style="display: block;" xmlns="http://www.w3.org/2000/svg" width="18"
-                    height="21" viewBox="0 0 18 21" fill="none">
-                    <path
-                      d="M5.18336 17L5.58336 17.6857C7.38336 20.7714 10.9834 20.7714 12.7834 17.6857L13.1834 17M1.36619 14.5496L1.46954 14.7627C2.13331 16.1311 3.52054 17 5.04144 17H13.2623C14.5656 17 15.7785 16.3342 16.4783 15.2347C17.4661 13.6826 17.2045 11.6465 15.8564 10.3945L15.8125 10.3538C14.8972 9.50376 14.4466 8.26543 14.6015 7.02598L14.6662 6.50905C15.0318 3.58379 12.7509 1 9.80286 1H8.09995C5.15552 1 2.87737 3.58064 3.24258 6.50234L3.32194 7.13719C3.46808 8.30631 3.04102 9.4741 2.17514 10.2731C0.99242 11.3645 0.663827 13.1016 1.36619 14.5496Z"
-                      stroke="#444444" stroke-width="1.5" stroke-linecap="round" />
-                  </svg>
-                  <svg class="selected" style="display: none;" xmlns="http://www.w3.org/2000/svg" width="18" height="21"
-                    viewBox="0 0 12 15" fill="none">
-                    <path fill-rule="evenodd" clip-rule="evenodd"
-                      d="M1.66593 5.06227C1.38515 2.81605 3.13661 0.832031 5.40031 0.832031H6.53559C8.80169 0.832031 10.555 2.81815 10.2739 5.06675L10.2308 5.41137C10.1475 6.07811 10.3899 6.74425 10.8823 7.2015L10.9115 7.22867C11.9871 8.22751 12.1958 9.85197 11.4077 11.0903C10.8926 11.8996 10.0291 12.4143 9.08197 12.4892L8.95448 12.7078C8.27928 13.8653 7.22728 14.4987 6.12259 14.4987C5.0179 14.4987 3.9659 13.8653 3.2907 12.7078L3.16518 12.4926C2.03765 12.4224 1.0276 11.7509 0.530172 10.7254L0.461271 10.5833C-0.103163 9.41969 0.160901 8.02373 1.11135 7.14666C1.57003 6.7234 1.79625 6.10481 1.71883 5.48551L1.66593 5.06227ZM4.34708 12.4987C4.85331 13.1905 5.5085 13.4987 6.12259 13.4987C6.73668 13.4987 7.39187 13.1905 7.8981 12.4987H4.34708Z"
-                      fill="white" />
-                  </svg>
-                </div>
-              </div>
-
-              <div class="dropdown ">
-                <button class=" d-flex gap-1 align-items-center  dropdown"
-                  style="border: none; background-color: white;" type="button" data-bs-toggle="dropdown"
-                  aria-expanded="false">
-                  <img src="../img/people.jpg" style="width: 30px; height: 30px; border-radius: 50%;" alt="">
-                  <svg xmlns="http://www.w3.org/2000/svg" width="16" height="8" viewBox="0 0 16 8" fill="none">
-                    <path d="M1 7H15M1 1H15" stroke="#121212" stroke-width="1.5" stroke-linecap="round" />
-                  </svg>
-                </button>
-                <ul class="dropdown-menu dropdown-menu-end cd-menu-item" style="border-radius: 1rem;">
-                  <li><a class="dropdown-item header-dropdown-font-2" href="#">Profile</a></li>
-                  <li><a class="dropdown-item header-dropdown-font-2" href="#">Help Center</a></li>
-                  <li>
-                    <hr class="dropdown-divider">
-                  </li>
-                  <li><a class="dropdown-item header-dropdown-font-2" href="#">Search and traveling</a></li>
-                  <li><a class="dropdown-item header-dropdown-font-2" href="#">Loh Out</a></li>
-                </ul>
-              </div>
-            </div>
-            <!--menu items end-->
-          </header>
-        </div>
-      </div>
-    </div>
-    <hr class="mt-0">
-  </div>
-
-  <div class="container" style="max-width: 1550px;">
-    <div class="d-flex justify-content-between align-items-start container">
-      <div class="">
-        <p class=" dashboard-font-5">A small room in denver</p>
-        <div class="mb-0 pi-font-4 d-flex gap-1 align-items-center">
-          Change listing
-          <svg xmlns="http://www.w3.org/2000/svg" width="10" height="6" viewBox="0 0 10 6" fill="none">
-            <path d="M9 1L5 5L1 1" stroke="#4B4B4D" stroke-linecap="round" stroke-linejoin="round" />
-          </svg>
-        </div>
-      </div>
-      <div class="d-flex gap-2 align-items-center">
-        <div><span class="bluedot"></span>Available</div>
-
-        <div class="d-flex align-items-center justify-content-center border"
-          style="border-radius: 50%; width: 40px; height: 40px; position: relative;">
-          <span class="green-dot"></span>
-          <svg xmlns="http://www.w3.org/2000/svg" width="12" height="12" viewBox="0 0 12 12" fill="none">
-            <path
-              d="M10.6666 3.83073C10.9427 3.83073 11.1666 3.60687 11.1666 3.33073C11.1666 3.05459 10.9427 2.83073 10.6666 2.83073V3.83073ZM2.52627 1.59596L2.1743 1.24083L2.1743 1.24083L2.52627 1.59596ZM3.81849 1.01919C4.01462 0.824801 4.01604 0.508221 3.82165 0.31209C3.62726 0.115959 3.31068 0.114546 3.11455 0.308935L3.81849 1.01919ZM9.60707 10.3988L9.95904 10.754L9.95904 10.754L9.60707 10.3988ZM8.31484 10.9756C8.11871 11.17 8.1173 11.4866 8.31169 11.6827C8.50608 11.8788 8.82266 11.8802 9.01879 11.6859L8.31484 10.9756ZM10.7895 8.83117L11.2855 8.89439L11.2855 8.89439L10.7895 8.83117ZM1.33325 8.16406C1.05711 8.16406 0.833253 8.38792 0.833253 8.66406C0.833253 8.9402 1.05711 9.16406 1.33325 9.16406V8.16406ZM10.7934 8.7974L11.2909 8.84784L10.7934 8.7974ZM1.50081 3.83073H10.6666V2.83073H1.50081V3.83073ZM2.87824 1.95109L3.81849 1.01919L3.11455 0.308935L2.1743 1.24083L2.87824 1.95109ZM2.1743 1.24083C1.80773 1.60414 1.50226 1.90583 1.28565 2.17556C1.0627 2.45317 0.893115 2.74494 0.847807 3.1004L1.83978 3.22684C1.8522 3.1294 1.89894 3.00892 2.06534 2.80172C2.23807 2.58664 2.49498 2.33095 2.87824 1.95109L2.1743 1.24083ZM9.25509 10.0437L8.31484 10.9756L9.01879 11.6859L9.95904 10.754L9.25509 10.0437ZM9.95904 10.754C10.3256 10.3907 10.6311 10.089 10.8477 9.81923C11.0706 9.54162 11.2402 9.24986 11.2855 8.89439L10.2936 8.76795C10.2811 8.86539 10.2344 8.98588 10.068 9.19307C9.89526 9.40815 9.63836 9.66384 9.25509 10.0437L9.95904 10.754ZM10.296 8.74695C10.2952 8.75396 10.2944 8.76096 10.2936 8.76795L11.2855 8.89439C11.2875 8.87889 11.2893 8.86337 11.2909 8.84784L10.296 8.74695ZM10.6666 8.16406H1.33325V9.16406H10.6666V8.16406ZM11.2909 8.84784C11.3316 8.44595 11.0012 8.16406 10.6666 8.16406L10.6666 9.16406C10.4795 9.16406 10.2701 9.00207 10.296 8.74695L11.2909 8.84784ZM1.50081 2.83073C1.66431 2.83073 1.87167 2.97669 1.83978 3.22684L0.847807 3.1004C0.792522 3.53414 1.15223 3.83073 1.50081 3.83073V2.83073Z"
-              fill="#444444" />
-          </svg>
-        </div>
-
-        <button class="button-001">Preview listing</button>
-      </div>
-    </div>
-  </div>
-
-  <hr>
-
-  <div class="container" style="max-width: 1550px;">
-    <div class="container d-flex justify-content-evenly align-items-start">
-      <div class="left-l-d">
-        <div class="1">
-          <p class="ph-font-2" style="color: #4b4b4d;">Listing details</p>
-
-        </div>
-
-        <div class="2">
-          <p class="ph-font-2" style="color: var(--GREY, #747474);">Pricing</p>
-        </div>
-        <div class="2">
-          <p class="ph-font-2" style="color: var(--GREY, #747474);">Rules and policies</p>
-          <div class="nav-bar-listing-details popup-font-3">
-            <p class="active">House Rules</p>
-            <p class="">Cancellation policy</p>
-
-
-          </div>
-        </div>
-        <div class="2">
-          <p class="ph-font-2" style="color: var(--GREY, #747474);">Calendar and availability</p>
-        </div>
-
-      </div>
 
 
       <div class="right-l-d">
@@ -350,33 +142,31 @@
           <hr class="mt-0">
           <div class="p-3">
           <p class="dashboard-font-14 ">Check-in window</p>
-             <div class=" dropdown-time  border" >
-              <select class="" aria-label="Default select example">
-                <option selected>Starting Time</option>
-                <option value="1">12:00</option>
-                <option value="1">1:00</option>
-                <option value="2">2:00</option>
-                <option value="3">3:00</option>
+             <div class="d-flex dropdown-time dropdown-time-1  border" >
+              <select class="select-time form-select form-select-lg mb-3" aria-label=".form-select-lg example">
+                <option selected>Open this select menu</option>
+                <option value="1">One</option>
+                <option value="2">Two</option>
+                <option value="3">Three</option>
               </select>
-
-              <select class="" aria-label="Default select example">
-                <option selected>End time</option>
-                <option value="1">12:00</option>
-                <option value="1">1:00</option>
-                <option value="2">2:00</option>
-                <option value="3">3:00</option>
+              <div class="divider-line"></div>
+              <select class="select-time form-select form-select-lg mb-3" aria-label=".form-select-lg example">
+                <option selected>Open this select menu</option>
+                <option value="1">One</option>
+                <option value="2">Two</option>
+                <option value="3">Three</option>
               </select>
              </div>
           </div>
           <div class="p-3">
             <p class="dashboard-font-14 ">Check-in window</p>
-            <div class=" dropdown-time  border" >
-             <select class="" aria-label="Default select example">
-               <option selected>Starting Time</option>
-               <option value="1">One</option>
-               <option value="2">Two</option>
-               <option value="3">Three</option>
-             </select>
+            <div class="dropdown-time dropdown-time-2" >
+              <select class="select-time form-select form-select-lg mb-3" aria-label=".form-select-lg example">
+                <option selected>Open this select menu</option>
+                <option value="1">One</option>
+                <option value="2">Two</option>
+                <option value="3">Three</option>
+              </select>
           </div>
         </div>
         <hr>
@@ -405,7 +195,7 @@
           <p class="dashboard-font-16">Long-term: <span> Standard</span></p>
         </div>
 
-        <div class="boder p-3">
+        <div class="border p-3" style="border-radius: 1rem;">
           <p class="dashboard-font-18">Short-term</p>
           <div class="d-flex align-items-center">
             <div class="form-check">
@@ -478,12 +268,5 @@
   </div>
   </div>
   </div>
-
-  <script src="js/bootstrap.bundle.min.js"></script>
-  <script src="../script.js"></script>
-  <script src="../js/jquery-3.7.1.js"></script>
-  <script src="../js/headerFooter.js"></script>
-
 </body>
-
 </html>
