--- a/demo1.html
+++ b/demo1.html
@@ -215,7 +215,7 @@ background: #FFF;" type="button" data-bs-toggle="dropdown" aria-expanded="false"
 
 
 <section class="">
-    <div class="map-main ">
+    <div class="map-main">
        <div id="Left-Map" class="left-Map">
 
         <!-- filter -->
@@ -243,7 +243,7 @@ background: #FFF;" type="button" data-bs-toggle="dropdown" aria-expanded="false"
                   </svg>
                   </button>
                   </div>
-              <div class="filter-menu d-flex p-1" style="padding-left: 0;">
+              <div id="filter-menu-1" class="filter-menu d-flex p-1" style="padding-left: 0;">
                 <button type="button" class="btn btn-cd-light btn-pill active">
                   <img src="img/bed-1.svg" alt=""> Room
                 </button>
@@ -271,15 +271,13 @@ background: #FFF;" type="button" data-bs-toggle="dropdown" aria-expanded="false"
                 </div>
             </div>
         </div>
-        <!--
-          <button class="scroll-next" style="display: block; margin-top: -.7rem;">
-            <svg xmlns="http://www.w3.org/2000/svg" width="18" height="12" viewBox="0 0 18 12" fill="none">
+        <button id="scroll-next" class="scroll-next" style="margin-top: -1rem;">
+          <svg xmlns="http://www.w3.org/2000/svg" width="18" height="12" viewBox="0 0 18 12" fill="none">
               <path d="M1 5.25C0.585786 5.25 0.25 5.58579 0.25 6C0.25 6.41422 0.585786 6.75 1 6.75L1 5.25ZM17 6.75C17.4142 6.75 17.75 6.41421 17.75 6C17.75 5.58579 17.4142 5.25 17 5.25V6.75ZM13.528 0.467309C13.2338 0.175726 12.7589 0.177844 12.4673 0.472041C12.1757 0.766238 12.1778 1.24111 12.472 1.53269L13.528 0.467309ZM14.763 2.74731L14.235 3.28L14.763 2.74731ZM14.763 9.25269L15.2909 9.78538L14.763 9.25269ZM12.472 10.4673C12.1778 10.7589 12.1757 11.2338 12.4673 11.528C12.7589 11.8222 13.2338 11.8243 13.528 11.5327L12.472 10.4673ZM16.9801 5.68667L17.7241 5.59184V5.59184L16.9801 5.68667ZM16.9801 6.31333L17.7241 6.40816V6.40816L16.9801 6.31333ZM1 6.75L17 6.75V5.25L1 5.25L1 6.75ZM12.472 1.53269L14.235 3.28L15.2909 2.21462L13.528 0.467309L12.472 1.53269ZM14.235 8.72L12.472 10.4673L13.528 11.5327L15.2909 9.78538L14.235 8.72ZM14.235 3.28C14.9505 3.98914 15.4413 4.47718 15.7734 4.8907C16.096 5.2924 16.2067 5.55042 16.2361 5.7815L17.7241 5.59184C17.6453 4.97372 17.3504 4.45878 16.9429 3.95146C16.545 3.45597 15.9814 2.89892 15.2909 2.21462L14.235 3.28ZM15.2909 9.78538C15.9814 9.10108 16.545 8.54403 16.9429 8.04854C17.3504 7.54121 17.6453 7.02628 17.7241 6.40816L16.2361 6.2185C16.2067 6.44958 16.096 6.7076 15.7734 7.10929C15.4413 7.52282 14.9505 8.01086 14.235 8.72L15.2909 9.78538ZM16.2361 5.7815C16.2546 5.92659 16.2546 6.07341 16.2361 6.2185L17.7241 6.40816C17.7586 6.13714 17.7586 5.86286 17.7241 5.59184L16.2361 5.7815Z" fill="#B4B4B4"/>
-              </svg>
-              </button>
-        -->
-        
+          </svg>
+      </button>
         </div>
+
 
         <div class="listing-map">
           <div class="listing-item">
@@ -475,8 +473,8 @@ background: #FFF;" type="button" data-bs-toggle="dropdown" aria-expanded="false"
        <div id="Right-Map" class="Right-Map">
         <div class="map-container">
           <div class="button-div">
-            <button onclick="increaseMap() " id="right-arrow" class="right-arrow card-text" style="display: block;"> <img src="img/arrow_forward.svg" alt=""></button>
-          <button onclick="decreaseMap()" id="left-arrow"  class="left-arrow card-text" style="display: block;"><img src="img/arrow_back.svg" alt=""></button>
+          <button onclick="increaseMap() " id="right-arrow" class="right-arrow card-text" style="display: flex;"> <img src="img/arrow_forward.svg" alt=""></button>
+          <button onclick="decreaseMap()" id="left-arrow"  class="left-arrow card-text" style="display: flex;"><img src="img/arrow_forward.svg" alt="" style="    rotate: 180deg;"></button>
           </div>
         <div id="map"></div>
         </div>
@@ -562,11 +560,11 @@ window.addEventListener("scroll", function () {
   function increaseMap() {
     document.querySelector('.map-main').classList.toggle('increase-Map');
     document.querySelector('.map-main').classList.remove('decreade-Map');
-     if (leftArrowButton.style.display === "block") {
+     if (leftArrowButton.style.display === "flex") {
       leftArrowButton.style.display = "none";
       rightArrowButton.innerHTML = `<img src="img/arrow_back.svg" alt=""> Show Map `;
      } else {
-       leftArrowButton.style.display = "block";
+       leftArrowButton.style.display = "flex";
       rightArrowButton.innerHTML = `<img src="img/arrow_forward.svg" alt="">`;
       }   
       window.scrollTo({
@@ -577,18 +575,44 @@ window.addEventListener("scroll", function () {
   function decreaseMap() {
     document.querySelector('.map-main').classList.toggle('decreade-Map');
     document.querySelector('.map-main').classList.remove('increase-Map');
-    if (rightArrowButton.style.display === "block") {
+    if (rightArrowButton.style.display === "flex") {
       rightArrowButton.style.display = "none";
       leftArrowButton.innerHTML = `show list <img src="img/arrow_forward.svg" alt="">`;
      } else {
-       rightArrowButton.style.display = "block";
+       rightArrowButton.style.display = "flex";
       leftArrowButton.innerHTML = `<img src="img/arrow_back.svg" alt="">`;
       }  
-      window.scrollTo({
-                top: 0,
-                behavior: 'smooth'
-      });
   }
+</script>
+<script>
+  function updateScrollButtonVisibility() {
+    var scrollableDiv = document.getElementById('filter-menu');
+    var scrollButton = document.getElementById('scroll-next');
+
+    // Check if the content overflows horizontally
+    if (scrollableDiv.scrollWidth > scrollableDiv.clientWidth) {
+      scrollButton.style.display = 'block'; // Show button
+    } else {
+      scrollButton.style.display = 'none'; // Hide button
+    }
+  }
+
+  // Scroll event listener to show/hide button
+  document.getElementById('scroll-next').addEventListener('click', function() {
+    var scrollableDiv = document.getElementById('filter-menu-1');
+    scrollableDiv.scrollBy({
+      left: 150,
+      behavior: 'smooth'
+    });
+    // Update button visibility after scrolling
+    setTimeout(updateScrollButtonVisibility, 300); // Adjust timeout as needed
+  });
+
+  // Initial check on page load
+  window.addEventListener('load', updateScrollButtonVisibility);
+
+  // Re-check on window resize
+  window.addEventListener('resize', updateScrollButtonVisibility);
 </script>
 
 <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
